fix: vertical align in upload progress solved

--- a/ch.jnetwork.sac-controls/projects/sac-bootstrap3/src/controls/upload/upload.scss
+++ b/ch.jnetwork.sac-controls/projects/sac-bootstrap3/src/controls/upload/upload.scss
@@ -51,6 +51,9 @@
         position: absolute;
         left: 0;
         right: 0;
+        top: 50%;
+        transform: translate(0, -50%);
+        display: table-cell;
         line-height: 34px;
         height: 34px;
         color: black;
